--- a/Kurzusok/Kurzusok/Views/Home/_SubjectModalEditPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/_SubjectModalEditPartial.cshtml
@@ -12,52 +12,58 @@
                     <button type="button" class="close" data-dismiss="modal"><span>X</span></button>
                 </div>
                 <div class="modal-body">
-                    <div id="errorAlert" class="alert alert-danger collapse">
-                        <strong> Hiba! </strong>
-                        <div id="errormessage"></div>
-                    </div>
+                    @*<div id="errorAlert" class="alert alert-danger collapse">
+            <button type="button" class="close" data-dismiss="alert"><span>X</span></button>
+            <strong> Hiba! </strong> Rossz, vagy nem megfelelő adatokat akarsz megadni! Helyesen tölts ki minden kötelező mezőt!
+        </div>*@
+                    <div id="errorAlert" class="text-danger"></div>
                     <div class="form-group">
                         <input type="hidden" asp-for="SubjectId" class="form-control" value="@Model.SubjectId" />
                         <input type="hidden" asp-for="SemesterId" class="form-control" value="@Model.SemesterId" />
                     </div>
                     <div class="form-group">
                         <label asp-for="SubjectCode">Tantárgy kód</label>
-                        <input asp-for="SubjectCode" class="form-control" />
+                        <input asp-for="SubjectCode" class="form-control" required />
                         <span asp-validation-for="SubjectCode" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Name">Megnevezés</label>
-                        <input asp-for="Name" class="form-control" />
+                        <input asp-for="Name" class="form-control" required />
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="EHours" class="control-label">Elméleti órák száma</label>
-                        <input asp-for="EHours" class="form-control" />
+                        <input asp-for="EHours" class="form-control" min="0" />
                         <span asp-validation-for="EHours" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="GyHours" class="control-label">Gyakorlati órák száma</label>
-                        <input asp-for="GyHours" class="form-control" />
+                        <input asp-for="GyHours" class="form-control" min="0" />
                         <span asp-validation-for="GyHours" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="LHours" class="control-label">Labor órák száma</label>
+                        <input asp-for="LHours" class="form-control" min="0" />
+                        <span asp-validation-for="LHours" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="EducationType" class="control-label">Képzési forma</label>
                         <select class="custom-select" asp-for="EducationType">
                             @if (Model.EducationType == "traditional")
                             {
-                                <option value="traditional" selected>Hagyományos</option>
+                                <option value="traditional" selected>Jelenléti</option>
                                 <option value="sync">Szinkron</option>
                                 <option value="async">Asszinkron</option>
                             }
                             else if (Model.EducationType == "sync")
                             {
-                                <option value="traditional">Hagyományos</option>
+                                <option value="traditional">Jelenléti</option>
                                 <option value="sync" selected>Szinkron</option>
                                 <option value="async">Asszinkron</option>
                             }
                             else
                             {
-                                <option value="traditional">Hagyományos</option>
+                                <option value="traditional">Jelenléti</option>
                                 <option value="sync">Szinkron</option>
                                 <option value="async" selected>Asszinkron</option>
                             }
@@ -105,3 +111,4 @@
         </form>
     </div>
 </div>
+@{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
